jilles      2006/11/18 14:21:58 UTC	(20061118-7213)
  Log:
  chanserv::trigger setting:
  - if not given, use the default, even if another value was previously used
  - give an error message if more than one character is given
  

  Changes:	Modified:
  +2 -5		trunk/src/conf.c (File Modified) 


jilles      2006/11/18 14:19:13 UTC	(20061118-7211)
  Log:
  Show /cs set fantasy status in /cs info.
  

  Changes:	Modified:
  +3 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2006/11/18 14:16:40 UTC	(20061118-7209)
  Log:
  Add help file for /cs set guard.
  

  Changes:	Modified:
  +9 -0		trunk/help/cservice/set_guard (File Added) 


jilles      2006/11/18 14:03:53 UTC	(20061118-7207)
  Log:
  Allow other values for chanserv::trigger than '!', '@' or '.',
  by removing the check for those in command processing.
  That check is no longer needed as chanserv now checks the
  first character before engaging in lengthy processing.
  

  Changes:	Modified:
  +0 -6		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/18 14:02:11 UTC	(20061118-7205)
  Log:
  Mention fantasy commands in /cs help.
  

  Changes:	Modified:
  +7 -0		trunk/modules/chanserv/help.c (File Modified) 


jilles      2006/11/18 13:48:55 UTC	(20061118-7203)
  Log:
  Change /cs why to work in a more sane way with flags.
  

  Changes:	Modified:
  +20 -30	trunk/modules/chanserv/why.c (File Modified) 


nenolod     2006/11/18 05:27:38 UTC	(20061118-7201)
  Log:
  - show GUARD in /cs info if enabled
  

  Changes:	Modified:
  +8 -0		trunk/modules/chanserv/info.c (File Modified) 


nenolod     2006/11/18 05:10:57 UTC	(20061118-7199)
  Log:
  Make ChanServ inhabitation optional:
  - Adds a new CFLAG, "guard", which determines whether ChanServ
    occupies the channel.
  - Changes the symantics of options::join_chans (now only enables
    SET GUARD)
  - Add guard to default CFLAGS.
  - Bump database revision so that the old rules are converted.