@@ -5,7 +5,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.conf 7199 2006-11-18 05:10:57Z nenolod $
+ * $Id: example.conf 7225 2006-11-19 15:44:42Z jilles $
  */
 
 /* Protocol module.
@@ -904,6 +904,13 @@ operclass "sra" {
 		operserv:global;
 		operserv:grant;
 	};
+
+	/* needoper
+	 * Only grant privileges to IRC users in this oper class if they
+	 * are opered; other use of privilege (channel succession, XMLRPC,
+	 * etc.) is unaffected by this.
+	 */
+	needoper;
 };
 
 /* The "ircop" operclass specifies privileges all IRCops get.
