@@ -1,3 +1,13 @@
+jilles      2006/11/18 16:43:46 UTC	(20061118-7215)
+  Log:
+  Add chanserv why help file.
+  
+
+  Changes:	Modified:
+  +9 -0		trunk/help/cservice/why (File Added) 
+  +5 -0		trunk/modules/chanserv/why.c (File Modified) 
+
+
 jilles      2006/11/18 14:21:58 UTC	(20061118-7213)
   Log:
   chanserv::trigger setting:
